# Homework-Content-Generation-Automation

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  HOW_IT_WORKS.md  README.md  WISHLIST.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_content_type.py  0003_gemini_usages.py  0004_gemini_usage_modalities.py  0005_book_gemini_cache.py  0006_homework_games_json.py  0007_homework_flashcards_json.py  0008_homework_more_structured.py  0009_homework_queue_columns.py  0010_homework_real_life_json.py  0010_provider_agnostic_usage.py  0011_homework_learning_sections.py  0011_homework_skills_json.py  0011_toc_section_number_nullable.py  0012_homework_learning_sections.py  (+6 more)
app/: auth.py  config.py  db.py  log.py
changelog/: DETAILS.md  SUMMARY.json
docs/: nets_flow_v2_generator_execution_summary.html  nets_generator_flow_v2_transformation_plan_FINAL_PATCHED.md  nets_homework_generator_flow_v2_execution_roadmap_PATCHED.md  nets_homework_generator_flow_v2_roadmap.html  nets_pure_content_automation_flow_v2_plan.md  nets_pure_content_automation_flow_v2_plan_summary.html  nets_pure_content_automation_flow_v2_roadmap.html  nets_pure_content_automation_flow_v2_roadmap.md
frontend/: app.css  app.js  book.html  index.html  job.html
scripts/: sync_infra_prompt_registry.py
tests/: conftest.py  manual_smoke_attachments.py  manual_smoke_toc.py
web/: biome.json  index.html  package-lock.json  package.json  vite.config.ts
(+262 files in other folders)
