[project]
name = "edu-homework"
version = "0.1.0"
description = "Curriculum-driven homework generation microservice"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.1.3",
    "google-genai>=0.3.0",
]
